load("//:config.bzl", "python_version", "version")
load("//tools/build:client_test.bzl", "client_test")
load("//tools/build:python.bzl", "py_lint_test", "py_sdist", "py_test")

py_sdist(
    name = "krpcserialio",
    out = "krpcserialio-%s.zip" % version,
    files = [
        "README.txt",
        "setup.py",
        "//:python_version",
        "//:version",
    ] + glob(["krpcserialio/**/*"]),
    path_map = {
        "version.py": "krpcserialio/version.py",
        "client/serialio/": "",
    },
)

test_suite(
    name = "test",
    tests = [
        ":iotest",
        ":lint",
    ],
)

client_test(
    name = "iotest",
    size = "small",
    server_executable = "//tools/TestServer",
    server_type = "serialio",
    tags = [
        "local",
        "requires-network",
    ],
    test_executable = ":iotestexe",
)

deps = [
    "@python_protobuf//file",
    "//client/python",
]

py_test(
    name = "iotestexe",
    size = "small",
    src = ":krpcserialio",
    pkg = "krpcserialio-" + python_version,
    tags = ["requires-network"],
    deps = deps,
)

py_lint_test(
    name = "lint",
    size = "small",
    srcs = glob(["krpcserialio/**/*"]),
    pkg = ":krpcserialio",
    pkg_name = "krpcserialio",
    pylint_config = "pylint.rc",
    deps = deps,
)
