load("//:config.bzl", "python_version", "version")
load("//tools/build:client_test.bzl", "client_test")
load("//tools/build:python.bzl", "py_lint_test", "py_sdist", "py_test")

py_sdist(
    name = "krpcserialio",
    out = "krpcserialio-%s.tar.gz" % version,
    files = [
        "README.txt",
        "pyproject.toml",
        "//:python_version",
        "//:version",
    ] + glob(["krpcserialio/**/*"]),
    path_map = {
        "version.py": "krpcserialio/version.py",
        "client/serialio/": "",
    },
)

test_suite(
    name = "test",
    tests = [
        ":iotest",
        ":lint",
    ],
)

client_test(
    name = "iotest",
    # medium (300s) not small (60s): ~33s worst case under parallel load (#540)
    size = "medium",
    server_executable = "//tools/TestServer",
    server_type = "serialio",
    tags = [
        "local",
        "requires-network",
    ],
    test_executable = ":iotestexe",
)

deps = [
    "@python_protobuf//file",
    "@python_pyserial//file",
    "//client/python",
]

py_test(
    name = "iotestexe",
    size = "small",
    src = ":krpcserialio",
    pkg = "krpcserialio-" + python_version,
    tags = ["requires-network"],
    deps = deps,
)

py_lint_test(
    name = "lint",
    # medium (300s) not small (60s): ~37s worst case under parallel load (#540)
    size = "medium",
    srcs = glob(["krpcserialio/**/*"]),
    pkg = ":krpcserialio",
    pkg_name = "krpcserialio",
    pylint_config = "pylint.rc",
    deps = deps,
)
