[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krpcserialio"
dynamic = ["version"]
authors = [
    {name = "djungelorm", email = "djungelorm@users.noreply.github.com"},
]
description = "Serial IO communication tests for kRPC"
readme = "README.txt"
license = "LGPL-3.0-only"
requires-python = ">=3.7"
dependencies = ["krpc", "pyserial"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Topic :: Communications",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Internet",
]

[project.urls]
Homepage = "https://krpc.github.io/krpc"

[tool.hatch.version]
path = "krpcserialio/version.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.sdist]
include = [
    "krpcserialio/",
    "README.txt",
    "VERSION.txt",
]

[tool.hatch.build.targets.wheel]
packages = ["krpcserialio"]
