load("//tools/build:python.bzl", "py_lint_test", "py_sdist", "py_test")
load("//tools/build:client_test.bzl", "client_test")
load("//:config.bzl", "python_version", "version")

py_sdist(
    name = "krpcwebsockets",
    out = "krpcwebsockets-%s.zip" % version,
    files = [
        "README.txt",
        "setup.py",
        "//:python_version",
        "//:version",
    ] + glob(["krpcwebsockets/**/*"]),
    path_map = {
        "version.py": "krpcwebsockets/version.py",
        "client/websockets/": "",
    },
)

test_suite(
    name = "test",
    tests = [
        ":lint",
        ":wstest",
    ],
)

client_test(
    name = "wstest",
    size = "small",
    server_executable = "//tools/TestServer",
    server_type = "websockets",
    tags = ["requires-network"],
    test_executable = ":wstestexe",
)

deps = [
    "@python_protobuf//file",
    "@python_websocket_client//file",
    "//client/python",
]

py_test(
    name = "wstestexe",
    size = "small",
    src = ":krpcwebsockets",
    pkg = "krpcwebsockets-" + python_version,
    tags = ["requires-network"],
    deps = deps,
)

py_lint_test(
    name = "lint",
    size = "small",
    srcs = glob(["krpcwebsockets/**/*"]),
    pkg = ":krpcwebsockets",
    pkg_name = "krpcwebsockets",
    pylint_config = "pylint.rc",
    deps = deps,
)
