load("//:config.bzl", "python_version", "version")
load("//tools/build:client_test.bzl", "client_test")
load("//tools/build:python.bzl", "py_lint_test", "py_sdist", "py_test")

py_sdist(
    name = "krpcwebsockets",
    out = "krpcwebsockets-%s.tar.gz" % version,
    files = [
        "README.txt",
        "pyproject.toml",
        "//:python_version",
        "//:version",
    ] + glob(["krpcwebsockets/**/*"]),
    path_map = {
        "version.py": "krpcwebsockets/version.py",
        "client/websockets/": "",
    },
)

test_suite(
    name = "test",
    tests = [
        ":lint",
        ":wstest",
    ],
)

client_test(
    name = "wstest",
    size = "medium",
    server_executable = "//tools/TestServer",
    server_type = "websockets",
    tags = ["requires-network"],
    test_executable = ":wstestexe",
)

deps = [
    "//client/python:krpc_lib",
    "@pypi//protobuf",
    "@pypi//websocket_client",
]

py_test(
    name = "wstestexe",
    size = "small",
    src = ":krpcwebsockets",
    pkg = "krpcwebsockets-" + python_version,
    tags = ["requires-network"],
    deps = deps,
)

py_lint_test(
    name = "lint",
    size = "medium",
    srcs = glob(["krpcwebsockets/**/*"]),
    pkg = ":krpcwebsockets",
    pkg_name = "krpcwebsockets",
    pylint_config = "pylint.rc",
    deps = deps,
)
