load("//:config.bzl", "assembly_version", "author")
load("//tools/build:csharp.bzl", "csharp_assembly_info", "csharp_gendarme_test", "csharp_library")
load("//tools/build:python.bzl", "py_lint_test")
load("//tools/ServiceDefinitions:build.bzl", "service_definitions")
load("//service:build.bzl", "service_deps")

filegroup(
    name = "DockingCamera",
    srcs = [
        "CHANGES.txt",
        ":KRPC.DockingCamera",
        ":ServiceDefinitions",
    ],
    visibility = ["//:__pkg__"],
)

csharp_assembly_info(
    name = "AssemblyInfo",
    cls_compliant = False,
    copyright = author,
    description = "DockingCamera API for kRPC",
    title = "KRPC.DockingCamera",
    version = assembly_version,
    visibility = [
        "//:__pkg__",  # Make visible to //:csproj-deps so it can copy AssemblyInfo.cs to generated_deps
    ],
)

srcs = [":AssemblyInfo"] + glob(["src/**/*.cs"])

deps = service_deps + ["//service/SpaceCenter:KRPC.SpaceCenter"]

csharp_library(
    name = "KRPC.DockingCamera",
    srcs = srcs,
    visibility = ["//visibility:public"],
    deps = deps,
)

service_definitions(
    name = "ServiceDefinitions",
    out = "KRPC.DockingCamera.json",
    assemblies = [
        ":KRPC.DockingCamera",
        "//service/SpaceCenter:KRPC.SpaceCenter",
        "//server:KRPC",
    ],
    service = "DockingCamera",
    visibility = ["//visibility:public"],
)

test_suite(
    name = "test",
    tests = [":lint"],
)

test_suite(
    name = "lint",
    tests = [
        # ':pylint',
        ":gendarme",
    ],
)

# FIXME: add tests
# py_lint_test(
#     name = 'pylint',
#     srcs = glob(['test/*.py']),
#     pylint_config = 'test/pylint.rc',
#     deps = ['//client/python', '//tools/krpctest'],
#     size = 'small'
# )

csharp_library(
    name = "KRPC.DockingCamera.Debug",
    srcs = srcs,
    define = ["CODE_ANALYSIS"],
    optimize = False,
    deps = deps,
)

csharp_gendarme_test(
    name = "gendarme",
    size = "small",
    ignores = "src/ignores.txt",
    lib = ":KRPC.DockingCamera.Debug",
)
