load("//:config.bzl", "assembly_version", "author")
load("//service:build.bzl", "service_deps")
load("//tools/build:csharp.bzl", "csharp_assembly_info", "csharp_library")
load("//tools/ServiceDefinitions:build.bzl", "service_definitions")

filegroup(
    name = "DockingCamera",
    srcs = [
        "CHANGES.txt",
        ":KRPC.DockingCamera",
        ":ServiceDefinitions",
    ],
    visibility = ["//:__pkg__"],
)

csharp_assembly_info(
    name = "AssemblyInfo",
    cls_compliant = False,
    copyright = author,
    description = "DockingCamera API for kRPC",
    title = "KRPC.DockingCamera",
    version = assembly_version,
    visibility = [
        "//:__pkg__",  # Make visible to //:csproj-deps so it can copy AssemblyInfo.cs to generated_deps
    ],
)

srcs = [":AssemblyInfo"] + glob(["src/**/*.cs"])

deps = service_deps + ["//service/SpaceCenter:KRPC.SpaceCenter"]

csharp_library(
    name = "KRPC.DockingCamera",
    srcs = srcs,
    visibility = ["//visibility:public"],
    deps = deps,
)

service_definitions(
    name = "ServiceDefinitions",
    out = "KRPC.DockingCamera.json",
    assemblies = [
        ":KRPC.DockingCamera",
        "//service/SpaceCenter:KRPC.SpaceCenter",
        "//server:KRPC",
    ],
    service = "DockingCamera",
    visibility = ["//visibility:public"],
)
