load("//:config.bzl", "assembly_version", "author")
load("//service:build.bzl", "service_deps")
load("//tools/build:csharp.bzl", "csharp_assembly_info", "csharp_library", "csharp_nunit_test")
load("//tools/build:python.bzl", "py_lint_test")
load("//tools/build/mono-4.5:build.bzl", "mono_net_libs")
load("//tools/ServiceDefinitions:build.bzl", "service_definitions")

filegroup(
    name = "SpaceCenter",
    srcs = [
        "CHANGES.txt",
        "LICENSE",
        "src/module-manager.cfg",
        ":KRPC.SpaceCenter",
        ":ServiceDefinitions",
        "@module_manager//file",
    ],
    visibility = ["//:__pkg__"],
)

csharp_assembly_info(
    name = "AssemblyInfo",
    cls_compliant = False,
    copyright = author,
    description = "Basic service for kRPC",
    internals_visible_to = ["TestingTools"],
    title = "KRPC.SpaceCenter",
    version = assembly_version,
    visibility = [
        "//:__pkg__",  # Make visible to //:csproj-deps so it can copy AssemblyInfo.cs to generated_deps
    ],
)

srcs = [":AssemblyInfo"] + glob(["src/**/*.cs"])

deps = service_deps

csharp_library(
    name = "KRPC.SpaceCenter",
    srcs = srcs,
    visibility = ["//visibility:public"],
    deps = deps,
)

service_definitions(
    name = "ServiceDefinitions",
    out = "KRPC.SpaceCenter.json",
    assemblies = [
        ":KRPC.SpaceCenter",
        "//server:KRPC",
    ],
    service = "SpaceCenter",
    visibility = ["//visibility:public"],
)

test_suite(
    name = "test",
    tests = [
        ":lint",
        ":test-attitude-error",
    ],
)

test_suite(
    name = "lint",
    tests = [
        ":pylint",
    ],
)

py_lint_test(
    name = "pylint",
    size = "medium",
    srcs = glob(["test/*.py"]),
    pylint_config = "test/pylint.rc",
    deps = [
        "//client/python",
        "//tools/krpctest",
    ],
)

csharp_assembly_info(
    name = "TestAssemblyInfo",
    cls_compliant = False,
    copyright = author,
    title = "KRPC.SpaceCenter.AutoPilot.Test",
    version = assembly_version,
)

attitude_error_test_deps = mono_net_libs

# Compile the pure attitude-error helper directly so these tests do not require a KSP runtime.
csharp_library(
    name = "KRPC.SpaceCenter.AutoPilot.Test",
    srcs = [
        "src/AutoPilot/AttitudeError.cs",
        "test/AttitudeErrorTest.cs",
        ":TestAssemblyInfo",
    ],
    nowarn = ["1591"],
    nunit_test = True,
    optimize = False,
    visibility = ["//:__pkg__"],
    deps = attitude_error_test_deps,
)

csharp_nunit_test(
    name = "test-attitude-error",
    size = "small",
    lib = ":KRPC.SpaceCenter.AutoPilot.Test",
    tags = ["local"],
    deps = attitude_error_test_deps,
)
