load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")
load("@krpc_core//tools/service_definitions:defs.bzl", "service_definitions")
load("//lib:ksp.bzl", "ksp_deps")
load("//:config.bzl", "version")

# filegroup(
#     name = "DockingCamera",
#     srcs = [
#         "CHANGES.txt",
#         ":KRPC.DockingCamera",
#         ":ServiceDefinitions",
#     ],
#     visibility = ["//:__pkg__"],
# )

csharp_library(
    name = "docking_camera",
    srcs = [":assembly_info"] + glob(["src/**/*.cs"]),
    out = "KRPC.DockingCamera",
    private_deps = ksp_deps,
    target_frameworks = ["netstandard2.1"],
    treat_warnings_as_errors = True,
    visibility = ["//visibility:public"],
    warning_level = 4,
    deps = [
        "//server",
        "//server:core",
        "//service/space_center",
    ],
)

expand_template(
    name = "assembly_info",
    out = "src/AssemblyInfo.cs",
    substitutions = {"{VERSION}": version},
    template = "src/AssemblyInfo.cs.tmpl",
    visibility = ["//visibility:public"],
)

service_definitions(
    name = "service_definitions",
    srcs = [
        ":docking_camera",
        "//service/space_center",
    ] + ksp_deps,
    out = "KRPC.DockingCamera.json",
    service = "DockingCamera",
    visibility = ["//visibility:public"],
)
