load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")
load("@krpc_core//tools/service_definitions:defs.bzl", "service_definitions")
load("//lib:ksp.bzl", "ksp_deps")
load("//:config.bzl", "version")

# filegroup(
#     name = "KerbalAlarmClock",
#     srcs = [
#         "CHANGES.txt",
#         ":KRPC.KerbalAlarmClock",
#         ":ServiceDefinitions",
#     ],
#     visibility = ["//:__pkg__"],
# )

csharp_library(
    name = "kerbal_alarm_clock",
    srcs = [":assembly_info"] + glob(["src/**/*.cs"]),
    out = "KRPC.KerbalAlarmClock",
    private_deps = ksp_deps,
    target_frameworks = ["netstandard2.1"],
    treat_warnings_as_errors = True,
    visibility = ["//visibility:public"],
    warning_level = 4,
    deps = [
        "//server",
        "//server:core",
        "//service/space_center",
    ],
)

expand_template(
    name = "assembly_info",
    out = "src/AssemblyInfo.cs",
    substitutions = {"{VERSION}": version},
    template = "src/AssemblyInfo.cs.tmpl",
    visibility = ["//visibility:public"],
)

service_definitions(
    name = "service_definitions",
    srcs = [
        ":kerbal_alarm_clock",
        "//service/space_center",
    ] + ksp_deps,
    out = "KRPC.KerbalAlarmClock.json",
    service = "KerbalAlarmClock",
    visibility = ["//visibility:public"],
)
