load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")
load("//tools/build:python.bzl", "py_lint_test")
load("@krpc_core//tools/service_definitions:defs.bzl", "service_definitions")
load("//lib:ksp.bzl", "ksp_deps")
load("//:config.bzl", "version")

# filegroup(
#     name = "RemoteTech",
#     srcs = [
#         "CHANGES.txt",
#         ":KRPC.RemoteTech",
#         ":ServiceDefinitions",
#     ],
#     visibility = ["//:__pkg__"],
# )

csharp_library(
    name = "remote_tech",
    srcs = [":assembly_info"] + glob(["src/**/*.cs"]),
    out = "KRPC.RemoteTech",
    private_deps = ksp_deps,
    target_frameworks = ["netstandard2.1"],
    treat_warnings_as_errors = True,
    visibility = ["//visibility:public"],
    warning_level = 4,
    deps = [
        "//server",
        "//server:core",
        "//service/space_center",
    ],
)

expand_template(
    name = "assembly_info",
    out = "src/AssemblyInfo.cs",
    substitutions = {"{VERSION}": version},
    template = "src/AssemblyInfo.cs.tmpl",
    visibility = ["//visibility:public"],
)

service_definitions(
    name = "service_definitions",
    srcs = [
        ":remote_tech",
        "//service/space_center",
    ] + ksp_deps,
    out = "KRPC.RemoteTech.json",
    service = "RemoteTech",
    visibility = ["//visibility:public"],
)

test_suite(
    name = "test",
    tests = [":lint"],
)

test_suite(
    name = "lint",
    tests = [
        ":pylint",
    ],
)

py_lint_test(
    name = "pylint",
    size = "small",
    srcs = glob(["test/*.py"]),
    pylint_config = "test/pylint.rc",
    deps = [
        "//client/python",
        "//tools/krpctest",
    ],
)
